@@ -1,3 +1,4 @@
+* Use locale format for data export
 * Add day view on calendar
 * Add CSV exports into print toolbar
 * Display unread and total of notes
